--- a/pom.xml
+++ b/pom.xml
@@ -44,19 +44,7 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
-                <configuration>
-                    <includes>
-                        <include>**/ControllerTestSuite.java</include>
-                        <include>**/BizTestSuite.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
+        <plugins/>
     </build>
 
 </project>
